# gentodo

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  README.md  config.toml  gentodo-0.1.0.ebuild  gentodo-0.1.1.ebuild  gentodo-0.1.3.ebuild  gentodo-0.2.0.ebuild  gentodo-1.0.0.ebuild  gentodo-1.1.1.ebuild  gentodo-9999.ebuild  pyproject.toml  setup.py  todo
gentodo/: main.py  parser.py
src/: gentodo.py  main.py  parser.py
src/bugzilla/: bugzilla.py
src/gentodo/: __init__.py  bugs.py  cli.py  commands.py  config.py  gentodo-completions.bash  main.py  parser.py
