[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
	{name = "Christopher Fore", email = "csfore@posteo.net"},
]
name = "gentodo"
dynamic = ["version"]
description = "Todo app"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
dependencies = [
	"requests",
]

[project.scripts]
gentodo = "gentodo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "gentodo.__version__"}
